<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/dogFragment"
        android:title="@string/dogs"
        android:icon="@drawable/ic_baseline_support_agent_24"
    />
    <item android:id="@+id/breedListFragment"
        android:title="@string/breeds"
        android:icon="@drawable/ic_baseline_list_alt_24"
    />
</menu>